--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Joyce.png" class="student-img" alt="...">
 
-                    <p class="student-text">Hallo! Ik ben Joyce Alfvoet en al heel mijn leven ben ik een kameleon. Door in verschillende landen te gewoond en verschillende talen geleerd te hebben, ben ik een multicultureel en open persoon geworden. Waar ik ook verbleef, IT is altijd de rode draad in mijn leven geweest. Nu krijg ik eindelijk de kans om via deze opleiding van mijn passie mijn beroep te maken.
+                    <p class="student-text">Hallo! Ik ben Joyce Alfvoet en al heel mijn leven ben ik een kameleon. Door in verschillende landen te wonen en verschillende talen geleerd te hebben, ben ik een multicultureel en open persoon geworden. Waar ik ook verbleef, IT is altijd de rode draad in mijn leven geweest. Nu krijg ik eindelijk de kans om via deze opleiding van mijn passie mijn beroep te maken.
 
                     </p>
                   </div>
