--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
               <h2 class="center-text">Michiel Wouters</h2>
               <div class="card-body">
                 <img src="./assets/images/avatars/Michiel.png" class="student-img" alt="...">
-                <p class="student-text Michiel">Lesgever: <br><br> Michiel is als ervaren ontwikkelaar met ruim 8
+                <p class="student-text ">Lesgever: <br><br> Michiel is als ervaren ontwikkelaar met ruim 8
                   jaar ervaring ideal geplaatst om de studenten voor te bereiden op de werkvloer. Zijn kennis en
                   ervaring worden enkel overschaduwd door zijn passie in het lesgeven.</p>
               </div>
