--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
                       <a target="_blank" href="https://github.com/Impesoft"><img src="./assets/images/github.svg"
                           alt="github" class="social-icons"></a>
-                      <a target="_blank" href="https://www.impesoft.org/CV/"><img src="./assets/images/globe.svg"
+                      <a target="_blank" href="https://impesoft.github.io"><img src="./assets/images/globe.svg"
                           alt="linkedin" class="social-icons"></a>
                     </div>
                   </div>
