--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
                       <a target="_blank" href="https://github.com/libertajoyce"><img src="./assets/images/github.svg"
                           alt="github" class="social-icons"></a>
-                      <a target="_blank" href="https://libertajoyce.github.io"><img src="./assets/images/globe.svg" alt="linkedin"
+                      <a target="_blank" href="https://libertajoyce.github.io/joyce-alfvoet/"><img src="./assets/images/globe.svg" alt="linkedin"
                           class="social-icons"></a>
                     </div>
                   </div>
