--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Deze Jobdag site is een van onze projecten van deze C# .Net cursus georganiseerd door Multimedi in opdracht van de VDAB; onze groep voor dit project bestond uit Dries Maes, Ward Impe, Seba Kesteloot en Nick Van Royen." />
+    content="12 kersverse studenten, bijna afgestudeerd van een C# .Net cursus georganiseerd door Multimedi in opdracht van de VDAB; " />
   <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/vnd.microsoft.icon" />
   <link href="./assets/css/main.css" rel="stylesheet">
   </link>
-  <title>Jobdag C# .Net Developers</title>
+  <title>C# .Net Developers</title>
 </head>
 
 <body>
@@ -23,11 +23,11 @@
     <div class="header-card rounded-border boxshadow center">
       <a class="header" href="#info-section">
         <div>
-          <h5>06/04/2021</h5>
+          <h5>bijna afgestudeerd</h5>
           <hr />
-          <h3>Digitale Jobdag</h3>
+          <h3>12 sterke studenten</h3>
           <hr />
-          <h5>.NET Developers</h5>
+          <h5>.NET C# Developers</h5>
         </div>
       </a>
     </div>
@@ -65,8 +65,7 @@
               <p>
               Eigen inbreng, studeervermogen, creativiteit en analytisch inzicht zijn hierbij onontbeerlijk en zodoende
               wordt elke cursist constant uitgedaagd om het beste van zichzelf te geven.
-              Halverwege onze opleiding bieden wij u deze <strong>digitale jobdag</strong> aan, waar u kan kennis maken met elk
-              van hen.
+             
             </p>
           </div>
         </div>
@@ -239,10 +238,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Dries.png" class="student-img" alt="...">
 
-                    <p class="student-text">Na 3 jaar te werken als project manager in de publieke IT-sector was het
-                      duidelijk dat IT mijn toekomst is. Mijn hogere scholing en werkervaring in combinatie met deze
-                      intensieve en brede opleiding maken van mij een polyvalente en capabele kandidaat. Mijn motivatie,
-                      energie en ambitie zijn een meerwaarde voor uw bedrijf. Ik stel niet teleur.</p>
+                    <p class="student-text"  style="color:red ; font-weight: bold; font-size: 50px; opacity: 40%; align-items: center; align-content: center ;text-align: center;"><br><br>Niet meer<br><br>beschikbaar</p>
                   </div>
 
                 </div>
@@ -757,7 +753,7 @@
 
   </section>
 
-  <!-- contact form -->
+  <!-- contact form 
 
   <section class="form-height">
     <div class="form-card rounded-border boxshadow center">
@@ -787,7 +783,7 @@
       </form>
     </div>
   </section>
-
+-->
   <!-- Footer -->
 
   <footer>
