--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Dries.png" class="student-img" alt="...">
 
-                    <p class="student-text"  style="color:red ; font-weight: bold; font-size: 50px; opacity: 40%; align-items: center; align-content: center ;text-align: center;"><br><br>Niet meer<br><br>beschikbaar</p>
+                    <p class="student-text student-hired"  ><br><br>Niet meer<br><br>beschikbaar</p>
                   </div>
 
                 </div>
@@ -252,9 +252,9 @@
                     <div class="student-text social-wrap">
                       <a target="_blank" href="https://www.linkedin.com/in/maes01/"><img
                           src="./assets/images/linkedin.svg" alt="linkedin" class="social-icons"></a>
-                      <a target="_blank" href="https://github.com/lun0r"><img src="./assets/images/github.svg"
+                      <a target="_blank" href="https://github.com/dries-maes"><img src="./assets/images/github.svg"
                           alt="github" class="social-icons"></a>
-                      <a target="_blank" href="https://lun0r.github.io/"><img src="./assets/images/globe.svg"
+                      <a target="_blank" href="https://dries-maes.github.io/"><img src="./assets/images/globe.svg"
                           alt="linkedin" class="social-icons"></a>
                     </div>
                   </div>
@@ -622,7 +622,7 @@
                     <img src="./assets/images/avatars/Ward.png" class="student-img" alt="...">
 
                     <p class="student-text">Hallo, ik ben Ward, 46 jaar, en ouder van een prachtige dochter van 5.
-                      Ik werkte laatste 20j fulltime als DJ waar ik mijn people skills kon ontwikkelen; diplomatisch,
+                      Ik werkte laatste 20j fulltime als DJ waar ik mijn interpersonal skills kon ontwikkelen; diplomatisch,
                       sociaal, maar ook voldoende assertief.
                       Ook ben ik al sinds 1999 beta tester. Dus testing en troubleshooting zitten me al behoorlijk in de
                       vingers. Logica en analytische skills maakte ik me eigen.</p>
