update text hoon

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
             <p class="border-top">
               <em>Obelisk</em> is een organisatie die zich bezig houdt met trajectbegeleiding van mensen op zoek naar
               werk, ergo een nieuwe uitdaging. <em>Multimedi</em> specialiseert zich in IT-opleidingen. Met deze
-              kruisbestuiving en <I>VDAB</I> als moederschip krijg je deze opleiding als resultaat. </p>
+              kruisbestuiving en <I>VDAB</I> als sponsor krijg je deze opleiding als resultaat. </p>
               <p >
               Alle cursisten werden vooraf grondig gescreend, getest en bevraagd naar hun motivatie. Uit het ruime
               aanbod van meer dan 100 kandidaten zijn bovenstaande cursisten geselecteerd. </p>
               <p >
-              <strong>De dertien gemotiveerde junior developers C#</strong> in spé volgen gedurende 6 maanden deze (snel)cursus.
+              <strong>De twaalf gemotiveerde junior C# developers </strong> in spé volgen gedurende 9 maanden deze (snel)cursus.
               De bedoeling is dat ze op het einde van dit half jaar hetzelfde potentieel hebben als een bachelor
               toegepaste informatica.</p>
               <p >
               De opleiding omvat klassikale lessen, zelfstudie, gezamenlijk projectwerk en sessies sollicitatie-en
-              communicatievaardigheden. Dit alles om de 13 junior developers zo optimaal mogelijk klaar te stomen naar
+              communicatievaardigheden. Dit alles om de 12 junior developers zo optimaal mogelijk klaar te stomen naar
               de behoeften van de huidige werkomstandigheden in IT en programmeren.</p>
               <p>
               Eigen inbreng, studeervermogen, creativiteit en analytisch inzicht zijn hierbij onontbeerlijk en zodoende
@@ -105,6 +105,7 @@
               <div class="vaardigheden2">
                 <h4>Enterprise programmeren gevorderd</h4>
                 <ul TYPE="square">
+                  <li>Angular & API's</li>
                   <li>Javascript Framework</li>
                   <li>ASP.NET</li>
                   <li>Scrum & Agile</li>
