nog aanpassingen hoon text

--- a/index.html
+++ b/index.html
@@ -48,24 +48,22 @@
           <img src="./assets/images/school.svg" class="card-img-top" alt="Afbeelding refererend naar de Opleiding">
           <div class="card-text">
             <p class="border-top">
-              <em>Obelisk</em> is een organisatie die zich bezig houdt met trajectbegeleiding van mensen op zoek naar
-              werk, ergo een nieuwe uitdaging. <em>Multimedi</em> specialiseert zich in IT-opleidingen. Met deze
-              kruisbestuiving en <I>VDAB</I> als sponsor krijg je deze opleiding als resultaat. </p>
+              <em>Multimedi</em> is een organisatie die zich bezig houdt met trajectbegeleiding van mensen op zoek naar
+              werk, ergo een nieuwe uitdaging. <em>Obelisk</em> specialiseert zich in kwalitatieve IT-opleidingen. Met deze
+              kruisbestuiving en <I>VDAB</I> als sponsor krijg je deze intensieve voltijdse & klassikale opleiding als resultaat. </p>
               <p >
               Alle cursisten werden vooraf grondig gescreend, getest en bevraagd naar hun motivatie. Uit het ruime
               aanbod van meer dan 100 kandidaten zijn bovenstaande cursisten geselecteerd. </p>
               <p >
-              <strong>De twaalf gemotiveerde junior C# developers </strong> in spé volgen gedurende 9 maanden deze (snel)cursus.
-              De bedoeling is dat ze op het einde van dit half jaar hetzelfde potentieel hebben als een bachelor
-              toegepaste informatica.</p>
+              <strong>De twaalf gemotiveerde junior C# developers </strong> in spé volgen gedurende 9 maanden deze (snel)cursus met de bedoelling om tegen het eind van de opleiding (2 juli) als goed getraind Junior .Net C# profiel aan de slag te kunnen.
+              </p>
               <p >
               De opleiding omvat klassikale lessen, zelfstudie, gezamenlijk projectwerk en sessies sollicitatie-en
               communicatievaardigheden. Dit alles om de 12 junior developers zo optimaal mogelijk klaar te stomen naar
               de behoeften van de huidige werkomstandigheden in IT en programmeren.</p>
               <p>
               Eigen inbreng, studeervermogen, creativiteit en analytisch inzicht zijn hierbij onontbeerlijk en zodoende
-              wordt elke cursist constant uitgedaagd om het beste van zichzelf te geven.
-             
+              wordt elke cursist constant uitgedaagd om het beste van zichzelf te geven.            
             </p>
           </div>
         </div>
