--- a/index.html
+++ b/index.html
@@ -621,12 +621,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Ward.png" class="student-img" alt="...">
 
-                    <p class="student-text">Hallo, ik ben Ward, 46 jaar, en ouder van een prachtige dochter van 5.
-                      Ik werkte laatste 20j fulltime als DJ waar ik mijn interpersonal skills kon ontwikkelen;
-                      diplomatisch,
-                      sociaal, maar ook voldoende assertief.
-                      Ook ben ik al sinds 1999 beta tester. Dus testing en troubleshooting zitten me al behoorlijk in de
-                      vingers. Logica en analytische skills maakte ik me eigen.</p>
+                    <p class="student-text student-hired"><br><br>Niet meer<br><br>beschikbaar</p>
                   </div>
                 </div>
               </div>
