--- a/index.html
+++ b/index.html
@@ -159,10 +159,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Andreas.png" class="student-img" alt="...">
 
-                    <p class="student-text">Ik ben Andreas, een Junior .Net-ontwikkelaar en ik geniet van het schrijven
-                      van een leesbare, aanpasbare en eenvoudige code die werkt. Ik heb een innovatieve houding ten
-                      aanzien van het oplossen van problemen en ben in staat om elk team van ontwikkelaars te versterken
-                      door diversiteit, levenservaring en creatieve input aan tafel te brengen.</p>
+                    <p class="student-text student-hired"><br><br>Niet meer<br><br>beschikbaar</p>
                   </div>
                 </div>
               </div>
@@ -281,14 +278,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Emma.png" class="student-img" alt="...">
 
-                    <p class="student-text">Hallo daar!
-                      Ik ben Emma, een jongedame van 26 jaar.
-                      Ik ben ooit begonnen aan een opleiding toegepaste informatica maar die heb ik jammer genoeg niet
-                      kunnen afwerken.
-                      Mijn grootste passie is altijd al informatica geweest, dus toen de kans zich voordeed heb ik deze
-                      meteen met 2 handen aangenomen.
-                      Nu kan ik met trots zeggen dat ik een junior C# developer ben! Hopelijk hoor ik snel iets van
-                      jullie!</p>
+                    <p class="student-text student-hired"><br><br>Niet meer<br><br>beschikbaar</p>
                   </div>
 
                 </div>
