--- a/index.html
+++ b/index.html
@@ -197,12 +197,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Diederick.png" class="student-img" alt="...">
 
-                    <p class="student-text">Hallo, ik ben Diederik, 39 jaar en uit Destelbergen. Na 15 jaren als
-                      verzekeringsconsultant gewerkt te hebben, heb ik besloten om mijn droom te volgen. Digitalisering
-                      is de toekomst en ik ben enthousiast om daar deel van uit te maken. Ik ben communicatief,
-                      klantgericht en open-minded. Regelmatige bijscholing vind ik een must. Are you interested? Lets
-                      meet!
-                    </p>
+                    <p class="student-text student-hired"><br><br>Niet meer<br><br>beschikbaar</p>
                   </div>
                 </div>
               </div>
@@ -445,11 +440,7 @@
                   <div class="card-body">
                     <img src="./assets/images/avatars/Nick.png" class="student-img" alt="...">
 
-                    <p class="student-text">Ik ben Nick, 33 jaar uit Belsele. Op weg om een gedreven software
-                      ontwikkelaar
-                      te worden. Na jaren zoeken naar een echte roeping, geloof ik die eindelijk gevonden te hebben.
-                      Mijn huidige vaardigheden omvatten JavaScript en basiskennis van C# en ik werk er hard aan om deze
-                      uit te breiden. Ik kijk er naar uit om mijn vaardigheden in praktijk om te zetten.</p>
+                     <p class="student-text student-hired"><br><br>Niet meer<br><br>beschikbaar</p>
                   </div>
 
                 </div>
@@ -525,10 +516,7 @@
                   <h2 class="center-text">Sebastiaan-Willem Kesteloot</h2>
                   <div class="card-body">
                     <img src="./assets/images/avatars/Seba.png" class="student-img" alt="...">
-                    <p class="student-text">Hallo! Mijn naam is Sebastiaan-Willem en zoals vele anderen ben ik op zoek
-                      naar werk. Buiten mijn steeds groeiende kennis van informatica en technische vaardigheden
-                      ben ik leergierig, praktisch, communicatief, rationeel ingesteld en hou mezelf graag
-                      creatief bezig.</p>
+                    <p class="student-text student-hired"><br><br>Niet meer<br><br>beschikbaar</p>
                   </div>
                 </div>
               </div>
